--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">JashanDemo</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="host">192.168.29.2</string>
+<!--    <string name="host">192.168.29.2</string>-->
+    <string name="host">172.20.10.13</string>
 </resources>
